# aou-research-template

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  GETTING_STARTED.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
analysis/: demo_cohort.sql  utilities.R
docs/experiments/: 0001-demo.md  README.md  _template.md
experiments/: _defaults.yaml
experiments/0001-demo/: README.md  config.yaml  demo_cohort.sql  demo_effect.R  demo_exploration.ipynb
experiments/_template/: README.md  config.yaml
experiments/defaults/: _base.yaml  demo.yaml
framework/docs/: IMPLEMENTATION_PLAN.md
framework/scripts/: check_no_data_files.sh
framework/tests/: test_cli_run.py  test_config.py  test_demo_config.py  test_new_experiment.py  test_runner.py  test_scaffolding.py  test_workspace.py
framework/utilities/: config.py  runner.py
framework/utilities/cli/: new.py  run.py
scripts/: ensure_r_packages.R  new_experiment.py  run_experiment.py  setup_data.R  setup_workspace.py
tests/: test_cli_run.py  test_config.py  test_demo_config.py  test_new_experiment.py  test_runner.py  test_sanitize.py  test_scaffolding.py
utilities/: __init__.py  runner.py  sanitize.py  workspace.py
